# notifications-utils

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.md  Makefile  README.md  docker-compose.devcontainer.yml  pyproject.toml  requirements.txt  requirements_for_test.txt  setup.py
.github/: dependabot.yml
.github/workflows/: checks.yml  daily_checks.yml
devcontainer-utils/: .devcontainer.json  Dockerfile
devcontainer-utils/scripts/: notify-utils-entrypoint.sh
notifications_utils/: __init__.py  celery.py  field.py  formatters.py  insensitive_dict.py  letter_timings.py  logging.py  markdown.py  recipients.py  request_helper.py  s3.py  sanitise_text.py  template.py  template_change.py  timezones.py  version.py
notifications_utils/clients/encryption/: encryption_client.py
notifications_utils/clients/redis/: __init__.py  redis_client.py
notifications_utils/clients/statsd/: statsd_client.py
notifications_utils/jinja_templates/: email_template.jinja2
scripts/: bump_version.py
tests/: conftest.py  test_base64_uuid.py  test_base_template.py  test_celery.py  test_countries.py  test_formatters.py  test_insensitive_dict.py  test_international_billing_rates.py  test_letter_timings.py  test_logging.py  test_markdown.py  test_recipient_csv.py  test_recipient_validation.py  test_request_header_authentication.py  test_s3.py  test_sanitise_text.py  test_serialised_model.py  test_template_change.py  test_template_types.py  test_timezones.py
tests/clients/: test_redis.py
tests/clients/encryption/: test_encryption_client.py
tests/clients/redis/: test_redis_client.py
