[tool.poetry]
name = "notifications-utils"
version = "0.2.4"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
async-timeout = "^4.0.2"
bleach = "^6.1.0"
blinker = "^1.6.2"
boto3 = "^1.28.66"
botocore = "^1.31.66"
cachetools = "^5.3.0"
certifi = "^2023.7.22"
cffi = "^1.16.0"
charset-normalizer = "^3.1.0"
click = "^8.1.3"
cryptography = "^41.0.6"
flask = "^2.3.2"
flask-redis = "^0.4.0"
geojson = "^3.0.1"
govuk-bank-holidays = "^0.13"
idna = "^3.4"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
jmespath = "^1.0.1"
markupsafe = "^2.1.2"
mistune = "==0.8.4"
numpy = "^1.24.2"
Ordered-set-37 = "^2.0"
phonenumbers = "^8.13.8"
pycparser = "^2.21"
python-dateutil = "^2.8.2"
python-json-logger = "^2.0.7"
pytz = "^2023.3"
pyyaml = "^6.0"
redis = "^5.0.1"
regex = "^2023.10.3"
requests = "^2.31.0"
s3transfer = "^0.7.0"
shapely = "^2.0.1"
six = "^1.16.0"
smartypants = "^2.0.1"
urllib3 = "^1.26.18"
webencodings = "^0.5.1"
werkzeug = "^3.0.1"


[tool.poetry.group.dev.dependencies]
bandit = "*"
beautifulsoup4 = "^4.11.1"
black = "^23.10.1"
celery = "^5.2.7"
freezegun = "^1.2.2"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
flake8-print = "^5.0.0"
isort = "^5.12.0"
pip-audit = "*"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.3.1"
pytest-profiling = "^1.7.0"
requests-mock = "^1.11.0"
radon = "^6.0.1"
snakeviz = "^2.1.1"
vulture = "^2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
